Add MIAPPE batch upload template, and link to download it.

--- a/app/views/studies/new.html.erb
+++ b/app/views/studies/new.html.erb
@@ -9,6 +9,11 @@
 
 	<h4>Upload studies from file:</h4>
 	<%= link_to "MIAPPE Study batch upload", batch_uploader_studies_path, class: "btn btn-primary" %>
+
+  <div>
+    <%=link_to "Download MIAPPE template here", "#{request.base_url}/batch_upload_template/MIAPPE Sudy batch template.zip" %>
+  </div>
+
 	<h4>Or create a study with the form:</h4>
 
 	<div class="show_basic">
